all function is done and project fenished

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section id="buttonBox">
             <button id="convertBtn">Convert</button>
             <button id="resetBtn">Reset</button>
-            <button id="changeBtn">Change</button>
+            <button class="" id="changeBtn">Change</button>
         </section>
         
     </section>
